<resources>
    <string name="app_name">MyTweet</string>
    <string name="welcome_message">Welcome to MyTweet</string>
    <string name="welcome_submessage">Come and see the drivel others think is important</string>
    <string name="login_button">Log In</string>
    <string name="loginHead">Enter your details to login</string>
    <string name="signupHead">Enter your details to Register</string>
    <string name="signup_button">Sign Up</string>
    <string name="firstName">FirstName</string>
    <string name="lastName">LastName</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="signIn">Sign In</string>
    <string name="tweetButton">Tweet</string>
    <string name="selectContact">Select Contact</string>
    <string name="emailTweet">Email Tweet</string>
    <string name="counter">140</string>
    <string name="settings">Settings</string>
    <string name="clear">Clear</string>
    <string name="deleteTweet">Delete Tweet</string>
    <string name="username_summary">Please enter your user name</string>
    <string name="username">Username</string>
    <string name="password_summary">You may set your password here</string>
    <string name="nmr_tweets">Configure Downloads</string>
    <string name="nmr_tweets_summary">How many Tweets to store locally?</string>
    <string name="set_refresh_interval">Refresh</string>
    <string name="set_refresh_interval_summary">Frequency of cloud updates (minutes)</string>
    <string name="follow">Follow</string>
    <string name="users">List of Users</string>
    <string name="take_photo">Take Photo</string>
    <string name="save_photo">Save Photo</string>
    <string name="refresh_interval_preference_key">refresh_interval</string>

</resources>
