<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    tools:context=".Views.Tweeter"
    android:weightSum="1">

    <Button
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_alignBottom="@+id/tweetTweet"
        style="?android:attr/buttonStyleSmall"
        android:text="@string/tweetButton"
        android:background="@color/colorAccent"
        android:id="@+id/tweetButton"
        android:layout_gravity="right" />

    <TextView
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_alignBottom="@+id/tweetTweet"
        android:layout_alignParentLeft="true"
        android:text="@string/counter"
        android:id="@+id/counter"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_gravity="right" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="174dp"
        android:id="@+id/tweetTweet"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New Text"
        android:id="@+id/textView"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/black"
        android:textStyle="bold"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@color/green"
        android:text="@string/selectContact"
        android:id="@+id/selectContact" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@color/green"
        android:text="@string/emailTweet"
        android:id="@+id/emailTweet" />
</LinearLayout>