<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    tools:context=".activities.TweeterPager"
    android:weightSum="1">

    <TextView
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:id="@+id/counter"
        android:text="@string/counter"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_margin="20dp"
        android:layout_alignParentTop="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text=""
        android:id="@+id/welcome"
        android:layout_above="@+id/counter"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:layout_margin="50dp"
        android:layout_alignLeft="@+id/counter"
        android:layout_below="@+id/welcome" />

    <ImageButton
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:id="@+id/imageButton"
        android:layout_marginTop="20dp"
        android:background="@mipmap/ic_lens"
        android:layout_alignLeft="@+id/imageView"
        android:layout_below="@+id/welcome"/>

    <Button
        android:layout_width="80dp"
        android:layout_height="40dp"
        style="?android:attr/buttonStyleSmall"
        android:text="@string/tweetButton"
        android:background="@color/colorAccent"
        android:id="@+id/tweetButton"
        android:layout_alignParentRight="true"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:layout_alignBottom="@+id/imageButton"
        android:layout_above="@+id/tweetTweet" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Whats in your mind?"
        android:layout_margin="10dp"
        android:layout_gravity="center_horizontal"
        android:layout_alignParentEnd="true"
        android:inputType="textMultiLine"
        android:gravity="top"
        android:id="@+id/tweetTweet"
        android:layout_above="@+id/date"
        android:layout_below="@+id/imageView"
        android:maxLength="140"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/date"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_above="@+id/emailTweet"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/green"
        android:text="@string/emailTweet"
        android:id="@+id/emailTweet"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="20dp"
        android:layout_above="@+id/selectContact"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/green"
        android:text="@string/selectContact"
        android:id="@+id/selectContact"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="20dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>